--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -56,7 +56,15 @@ jobs:
             displayName: Install dependencies
             inputs:
                 command: "install"
+                workingDir: "${{ parameters.path }}/${{ parameters.libName }}"
                 verbose: false
+          # Runs lerna bootstrap scoped to this package and any local dependencies so that npm run build:all commands work
+          - task: Npm@1
+            displayName: Link dependencies
+            inputs:
+                command: "custom"
+                workingDir: "${{ parameters.path }}/${{ parameters.libName }}"
+                customCommand: "run link:localDeps --if-present"
 
           # KeyVault connection
           - task: AzureKeyVault@2
