--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -81,6 +81,12 @@ jobs:
             env:
                 NPM_TOKEN: $(MSALJSNPMTOKEN)
 
+          - task: CmdLine@2
+            displayName: Check NPM login
+            inputs:
+                script: npm whoami
+                workingDirectory: "${{ parameters.path }}/${{ parameters.libName }}"
+
           # Publish to npm
           - task: Npm@1
             displayName: Publish to npm
