--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -116,10 +116,10 @@ jobs:
                 customCommand: "pack"
 
           # Remove .npmrc file
-          # - task: DeleteFiles@1
-          #   displayName: Remove .npmrc file
-          #   inputs:
-          #       Contents: ${{ parameters.path }}/${{ parameters.libName }}/.npmrc
+          - task: DeleteFiles@1
+            displayName: Remove .npmrc file
+            inputs:
+                Contents: ${{ parameters.path }}/${{ parameters.libName }}/.npmrc
 
           # Install Release Scripts dependencies
           - task: Npm@1
