--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -20,7 +20,7 @@ jobs:
     permissions:
       contents: read  # for actions/checkout to fetch code
       pull-requests: read  # for dorny/paths-filter to read pull requests
-    if: github.actor != 'dependabot[bot]'
+    if: github.actor != 'dependabot[bot]' && github.ref != 'refs/heads/release-staging' && !contains(github.ref, 'post-release')
     runs-on: ubuntu-latest
     env:
       BEACHBALL: 1
