--- a/samples/msal-angular-v3-samples/angular16-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular16-sample-app/package.json
@@ -43,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "puppeteer": "^20.7.3",
     "typescript": "~4.9.4"
   }
 }
