--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -48,6 +48,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "puppeteer": "^20.7.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "typescript": "~4.9.5"
