--- a/samples/msal-react-samples/tsconfig.json
+++ b/samples/msal-react-samples/tsconfig.json
@@ -12,7 +12,6 @@
         "noImplicitReturns": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
         "experimentalDecorators": true,
         "importHelpers": true,
@@ -21,6 +20,14 @@
             "node",
             "jest"
         ],
+        "jsx": "preserve",
+        "isolatedModules": true,
+        "allowJs": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true,
+        "incremental": true
     },
     "include": [
         "**/test/*.spec.ts"
