--- a/samples/msal-react-samples/typescript-sample/tsconfig.json
+++ b/samples/msal-react-samples/typescript-sample/tsconfig.json
@@ -1,31 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src",
-    "test"
-  ],
-  "types": [
-    "node",
-    "jest"
-  ]
+  "extends": "../tsconfig.json"
 }
