--- a/samples/msal-react-samples/tsconfig.json
+++ b/samples/msal-react-samples/tsconfig.json
@@ -24,7 +24,7 @@
         "isolatedModules": true,
         "allowJs": true,
         "skipLibCheck": true,
-        "strict": true,
+        "strict": false,
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
         "incremental": true
