--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -51,14 +51,15 @@
     "@azure/msal-browser": "^3.0.0-beta.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^27.0.0",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
-    "jest": "^27.0.4",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-jest": "^27.0.2",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.0.0",
     "typescript": "^4.9.5"
   },
