--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -23,8 +23,8 @@
     "@angular/platform-browser": "^16.0.4",
     "@angular/platform-browser-dynamic": "^16.0.4",
     "@angular/router": "^16.0.4",
-    "@azure/msal-angular": "^3.0.0-alpha.2",
-    "@azure/msal-browser": "^3.0.0-alpha.2",
+    "@azure/msal-angular": "^3.0.0-beta.0",
+    "@azure/msal-browser": "^3.0.0-beta.0",
     "core-js": "^3.21.1",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
@@ -47,7 +47,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ts-node": "^10.7.0",
-    "tslint": "^6.1.3",
     "typescript": "~4.9.5"
   }
 }
