--- a/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
+++ b/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
@@ -53,7 +53,7 @@
         "typescript": "~4.5.4"
     },
     "dependencies": {
-        "@azure/msal-node": "file:../../../lib/msal-node",
+        "@azure/msal-node": "^2.0.0-beta.0",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.3",
         "electron-squirrel-startup": "^1.0.0",
