--- a/samples/msal-node-samples/ElectronTestApp/package.json
+++ b/samples/msal-node-samples/ElectronTestApp/package.json
@@ -24,7 +24,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.8.0",
-    "axios": "^0.21.0"
+    "@azure/msal-node": "^2.0.0-beta.0",
+    "axios": "^1.4.0"
   }
 }
