--- a/samples/msal-node-samples/ExpressTestApp/package.json
+++ b/samples/msal-node-samples/ExpressTestApp/package.json
@@ -19,12 +19,11 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.3.1",
-    "axios": "^0.21.0",
+    "@azure/msal-node": "^2.0.0-beta.0",
+    "axios": "^1.4.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "uuid": "^8.3.1"
