--- a/samples/msal-node-samples/auth-code-cli-app/package.json
+++ b/samples/msal-node-samples/auth-code-cli-app/package.json
@@ -12,8 +12,8 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
-    "axios": "^0.27.2",
+    "@azure/msal-node": "^2.0.0-beta.0",
+    "axios": "^1.4.0",
     "open": "^8.4.0"
   }
 }
