--- a/samples/msal-node-samples/auth-code-pkce/package.json
+++ b/samples/msal-node-samples/auth-code-pkce/package.json
@@ -5,7 +5,6 @@
   "main": "dist/index.js",
   "private": true,
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
     "prestart": "npm run build",
@@ -15,7 +14,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "file:../../../lib/msal-node",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2"
   },
@@ -23,7 +22,6 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.10.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.4.3"
   }
 }
