--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -35,6 +35,7 @@
     "lint:fix": "npm run lint -- -- --fix",
     "build:all": "npm run build:common && npm run build",
     "build:common": "cd ../msal-common && npm run build",
+    "build:modules:watch": "rollup -cw --bundleConfigAsCjs",
     "link:localDeps": "npx lerna@6 bootstrap --scope @azure/msal-common --scope @azure/msal-node",
     "prepack": "npm run build:all",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
