--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -49,7 +49,6 @@
     "puppeteer": "^20.7.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.7.0",
-    "typescript": "~4.9.5",
-    "e2e-test-utils": "file:../../e2eTestUtils"
+    "typescript": "~4.9.5"
   }
 }
