--- a/.pipelines/post-release.yml
+++ b/.pipelines/post-release.yml
@@ -14,40 +14,17 @@ stages:
           - task: NodeTool@0
             displayName: Install Node
             inputs:
-              versionSpec: '16.x'
+              versionSpec: '20.x'
               checkLatest: true
 
-          # Update each package with artifacts from release
-          - template: custom-templates/post-publish-template.yml
-            parameters:
-              name: 'msal_common'
-              libName: 'common'
-
-          - template: custom-templates/post-publish-template.yml
-            parameters:
-              name: 'msal_browser'
-              libName: 'browser'
-
-          - template: custom-templates/post-publish-template.yml
-            parameters:
-              name: 'msal_node'
-              libName: 'node'
-
-          - template: custom-templates/post-publish-template.yml
-            parameters:
-              name: 'msal_react'
-              libName: 'react'
-
-          - template: custom-templates/post-publish-template.yml
-            parameters:
-              name: 'msal_angular'
-              libName: 'angular'
-              
-          - template: custom-templates/post-publish-template.yml
-            parameters:
-              name: 'msal_node_extensions'
-              libName: 'node-extensions'
-              path: 'extensions'
+          # Update each package-lock
+          - task: Npm@1
+            displayName: 'Update package-lock'
+            condition: succeeded()
+            inputs:
+              command: 'install'
+              verbose: false
+            continueOnError: true
 
           # Get GitHub PAT
           - task: AzureKeyVault@2
