--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "compile": "node-gyp rebuild",
     "clean": "shx rm -rf dist bin",
-    "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.js",
+    "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.cjs",
     "build:common": "cd ../../lib/msal-common && npm run build",
     "build:all": "npm run build:common && npm run build",
     "test": "jest",
@@ -45,7 +45,7 @@
     "link:localDeps": "npx lerna@6 bootstrap --scope @azure/msal-common --scope @azure/msal-node-extensions",
     "lint": "cd ../../ && npm run lint:node:extensions",
     "lint:fix": "npm run lint -- -- --fix",
-    "prepack": "npm run build:all && node ./scripts/checkBinaries.js"
+    "prepack": "npm run build:all && node ./scripts/checkBinaries.cjs"
   },
   "author": {
     "name": "Microsoft",
