--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/msal-react",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "author": {
     "name": "Microsoft",
     "email": "nugetaad@microsoft.com",
@@ -44,11 +44,11 @@
     "format:fix": "npx prettier --ignore-path .gitignore --write src test"
   },
   "peerDependencies": {
-    "@azure/msal-browser": "^3.0.0-beta.1",
+    "@azure/msal-browser": "^3.0.0",
     "react": "^16.8.0 || ^17 || ^18"
   },
   "devDependencies": {
-    "@azure/msal-browser": "^3.0.0-beta.1",
+    "@azure/msal-browser": "^3.0.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.0",
