--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -69,7 +69,6 @@ jobs:
           # Write NPM authToken
           - bash: echo $NPM_TOKEN > .npmrc
             displayName: Write npm authToken
-            workingDirectory: "${{ parameters.path }}/${{ parameters.libName }}"
             env:
                 NPM_TOKEN: $(MSALJSNPMTOKEN)
 
@@ -111,7 +110,7 @@ jobs:
           - task: DeleteFiles@1
             displayName: Remove .npmrc file
             inputs:
-                Contents: ${{ parameters.path }}/${{ parameters.libName }}/.npmrc
+                Contents: /.npmrc
 
           # Install Release Scripts dependencies
           - task: Npm@1
