--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: npm run build --workspace=lib/** --workspace=extensions/**
 
       - name: Generate
         run: npm run doc:generate
