--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -13,7 +13,7 @@ jobs:
     if: ((github.event.pull_request.merged == true && contains(github.head_ref,'post-release')) || github.event_name == 'workflow_dispatch')
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pages: write
     steps:
       - uses: actions/checkout@v3
