--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -97,7 +97,7 @@ jobs:
             inputs:
                 command: "custom"
                 workingDir: "${{ parameters.path }}/${{ parameters.libName }}"
-                customCommand: "run deploy"
+                customCommand: "run deploy --workspaces=false"
           - task: Npm@1
             displayName: Deploy to npm (Angular only) - Test Mode
             condition: and(eq('${{ parameters.libName }}', 'msal-angular'), ${{ parameters.testMode }})
