--- a/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/package.json
+++ b/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node": "^2.0.1",
     "express": "^4.18.2",
     "url": "^0.11.0"
   },
