--- a/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/tsconfig.json
+++ b/samples/msal-node-samples/custom-INetworkModule-and-network-tracing/tsconfig.json
@@ -4,7 +4,13 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": [
+      "node",
+      "express"
+    ]
   },
-  "lib": ["es2015"]
+  "lib": [
+    "es2015"
+  ]
 }
