--- a/.pipelines/custom-templates/publish-template.yml
+++ b/.pipelines/custom-templates/publish-template.yml
@@ -69,6 +69,14 @@ jobs:
           # Write NPM authToken
           - bash: echo $NPM_TOKEN > .npmrc
             displayName: Write npm authToken
+            condition: not(eq('${{ parameters.libName }}', 'msal-angular'))
+            env:
+                NPM_TOKEN: $(MSALJSNPMTOKEN)
+          # Write NPM authToken (Angular only)
+          - bash: echo $NPM_TOKEN > .npmrc
+            displayName: Write npm authToken
+            workingDirectory: "${{ parameters.path }}/${{ parameters.libName }}"
+            condition: eq('${{ parameters.libName }}', 'msal-angular')
             env:
                 NPM_TOKEN: $(MSALJSNPMTOKEN)
 
@@ -109,8 +117,15 @@ jobs:
           # Remove .npmrc file
           - task: DeleteFiles@1
             displayName: Remove .npmrc file
+            condition: not(eq('${{ parameters.libName }}', 'msal-angular'))
             inputs:
                 Contents: /.npmrc
+          # Remove .npmrc file (Angular only)
+          - task: DeleteFiles@1
+            displayName: Remove .npmrc file
+            condition: eq('${{ parameters.libName }}', 'msal-angular')
+            inputs:
+                Contents: ${{ parameters.path }}/${{ parameters.libName }}/.npmrc
 
           # Install Release Scripts dependencies
           - task: Npm@1
