--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -52,6 +52,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.0",
+    "@types/node": "^20.5.1",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "jest": "^29.5.0",
