--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -35,7 +35,8 @@
     "./package.json": "./package.json"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs",
