--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -24,8 +24,8 @@
     "deploy": "npm run build:all:prod && npm publish ./dist --workspaces=false",
     "test": "ng test",
     "test:coverage": "npm test",
-    "lint": "cd ../../ && npm run lint:angular",
-    "lint:fix": "npm run lint -- -- --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "e2e": "ng e2e",
     "prepack": "npm run build:all",
     "prepublishOnly": "echo Use npm run deploy && exit 1",
@@ -54,6 +54,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "eslint-config-msal": "^0.0.0",
     "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.2",
