--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -57,8 +57,8 @@
   "scripts": {
     "clean": "shx rm -rf dist lib",
     "clean:coverage": "rimraf ../../.nyc_output/*",
-    "lint": "cd ../../ && npm run lint:browser",
-    "lint:fix": "npm run lint -- -- --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:coverage:only": "npm run clean:coverage && npm run test:coverage",
@@ -84,6 +84,7 @@
     "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
     "dotenv": "^8.2.0",
+    "eslint-config-msal": "^0.0.0",
     "fake-indexeddb": "^3.1.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
