--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -43,8 +43,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "cd ../../ && npm run lint:node",
-    "lint:fix": "npm run lint -- -- --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node",
     "prepack": "npm run build:all",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
@@ -64,6 +64,7 @@
     "@types/node": "^20.3.1",
     "@types/sinon": "^7.5.0",
     "@types/uuid": "^7.0.0",
+    "eslint-config-msal": "^0.0.0",
     "jest": "^29.5.0",
     "prettier": "2.8.7",
     "rollup": "^3.20.1",
