--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -36,8 +36,8 @@
     "build:modules:watch": "rollup -cw --bundleConfigAsCjs",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "cd ../../ && npm run lint:react",
-    "lint:fix": "npm run lint -- -- --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-browser --workspace=@azure/msal-react",
     "prepack": "npm run build:all",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
@@ -54,6 +54,7 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
+    "eslint-config-msal": "^0.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "2.8.7",
