--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -90,12 +90,7 @@ body:
     - type: textarea
       attributes:
           label: Msal Logs
-          description: "Please provide verbose level log messages from msal. Bug reports without verbose MSAL logs will be closed without comment."
-
-    - type: textarea
-      attributes:
-          label: Sanitized Network Trace
-          description: "Please upload a sanitized network trace (preferably from Fiddler, but network .HAR files are acceptable) containing the requests and responses from the failed authentication scenario. **Important: Please make sure to properly scrub all sensitive information from the trace, including but not limited to access/refresh tokens, client secrets, identifiable user information, etc.** Bug reports without sanitized network traces can be closed without comment. [Here's a guide](https://learn.microsoft.com/en-us/azure/azure-web-pubsub/howto-troubleshoot-network-trace) on how to collect a network trace."
+          description: "Please provide verbose level log messages from msal. Bug reports without verbose MSAL logs will be closed without comment. Please look at our [Logging Guide](https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/f9b96af818fd2725b8a8d93df7a9968492b59030/lib/msal-browser/docs/logging.md#L1) for instructions on how to collect MSAL logs."
 
     - type: textarea
       attributes:
