--- a/lib/msal-browser/tsconfig.json
+++ b/lib/msal-browser/tsconfig.json
@@ -11,6 +11,7 @@
         ],
         "outDir": "./dist",
         "allowUnusedLabels": false,
+        "composite": false,
         "noImplicitReturns": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
@@ -19,11 +20,6 @@
             "jest"
         ]
     },
-    "references": [
-        {
-            "path": "../msal-common"
-        }
-    ],
     "include": [
         "src",
         "test"
