--- a/lib/msal-common/tsconfig.json
+++ b/lib/msal-common/tsconfig.json
@@ -37,6 +37,7 @@
         ],
         "outDir": "./dist",
         "allowUnusedLabels": false,
+        "composite": false,
         "noImplicitReturns": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
