--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -24,7 +24,8 @@
     "jest": "^29.5.0",
     "jose": "^2.0.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@azure/msal-browser": "^3.0.0-beta.0"
   },
   "browserslist": [
     "last 2 versions",
