--- a/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
+++ b/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
@@ -53,8 +53,7 @@
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.2.2",
         "ts-node": "^10.0.0",
-        "typescript": "~4.5.4",
-        "e2e-test-utils": "^0.0.1"
+        "typescript": "~4.5.4"
     },
     "dependencies": {
         "@azure/msal-node": "^2.0.0-beta.0",
