--- a/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
+++ b/samples/msal-angular-v3-samples/angular-b2c-sample-app/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "^16.0.4",
     "@angular/platform-browser-dynamic": "^16.0.4",
     "@angular/router": "^16.0.4",
-    "@azure/msal-angular": "^3.0.0-beta.0",
-    "@azure/msal-browser": "^3.0.0-beta.0",
+    "@azure/msal-angular": "^3.0.4",
+    "@azure/msal-browser": "^3.1.0",
     "core-js": "^3.21.1",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
