--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -17,6 +17,7 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@azure/msal-browser": "^3.1.0",
     "@types/express": "^4.17.3",
     "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.0",
@@ -24,8 +25,7 @@
     "jest": "^29.5.0",
     "jose": "^2.0.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.9.5",
-    "@azure/msal-browser": "^3.0.0-beta.0"
+    "typescript": "^4.9.5"
   },
   "browserslist": [
     "last 2 versions",
