--- a/samples/msal-browser-samples/TestingSample/package.json
+++ b/samples/msal-browser-samples/TestingSample/package.json
@@ -9,7 +9,7 @@
     "test": "npx playwright test"
   },
   "dependencies": {
-    "@azure/msal-node": "^2.0.0-beta.0",
+    "@azure/msal-node": "^2.1.0",
     "express": "^4.12.3",
     "path": "^0.11.14"
   },
