--- a/samples/msal-react-samples/gatsby-sample/package.json
+++ b/samples/msal-react-samples/gatsby-sample/package.json
@@ -13,8 +13,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@azure/msal-browser": "^3.0.0-beta.0",
-    "@azure/msal-react": "^2.0.0-beta.0",
+    "@azure/msal-browser": "^3.1.0",
+    "@azure/msal-react": "^2.0.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
