--- a/samples/msal-react-samples/nextjs-sample/package.json
+++ b/samples/msal-react-samples/nextjs-sample/package.json
@@ -10,8 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@azure/msal-browser": "^3.0.0-beta.0",
-    "@azure/msal-react": "^2.0.0-beta.0",
+    "@azure/msal-browser": "^3.1.0",
+    "@azure/msal-react": "^2.0.3",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
